Fix newInstance() warnings